--- a/package.json
+++ b/package.json
@@ -1,19 +1,5 @@
 {
-  "name": "smoke-trees",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
-    "express": "^4.21.0",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "postinstall": "npm rebuild sqlite3"
   }
 }
